# argosfs

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/: apply_batched_replacement_fix.py  dependabot.yml
.github/workflows/: apply-batched-replacement-fix-pr.yml  apply-batched-replacement-fix.yml  capos-full-qemu.yml  coverage.yml  performance-report.yml  rust-ci.yml  security.yml  weekly-randomized-model.yml
contrib/initramfs/: argosfs-root.sh
docs/: architecture.md  artifact-evaluation.md  boot.md  capos-rootfs.md  cli.md  compatibility-report.md  limitations.md  metadata-scalability.md  performance-report.md  pool-config.example.json  raw-backend.md  related-work.md  repository-layout.md  rootfs.md  safety-invariants.md  self-driving-model.md  stripe-updates.md  testing.md
paper-data/: README.md
scripts/: build_capos_qemu_image.sh  ci_install_deps.sh  discover_capos_qemu_artifacts.py  run_full_validation.py  test_block_lifecycle.sh  test_capos_build.sh  test_cli_features.sh  test_crash_consistency.sh  test_initramfs_dry_run.sh  test_loop_backend.sh  test_privileged_fuse.sh  test_qemu_block_lifecycle_stress.sh  test_qemu_boot.sh  test_qemu_crash_recovery.sh  test_qemu_degraded_rootfs.sh  test_qemu_full_guest.sh  test_qemu_hotplug.sh  test_qemu_ops.sh  test_qemu_reboot_persistence.sh  test_qemu_rootfs_stress.sh  test_randomized_model.py  test_randomized_model.sh  test_raw_backend.sh  test_rootfs_smoke.sh  test_single_device_fuse_rootfs.sh
scripts/qemu/: boot.sh  (+11 more)
src/: acl.rs  advanced_io.rs  allocator.rs  autopilot.rs  backend.rs  cache.rs  compression.rs  crypto.rs  erasure.rs  error.rs  error_tests.rs  fusefs.rs  health.rs  journal.rs  lib.rs  metadata_store.rs  metrics.rs  raw_format.rs  raw_store.rs  rootfs.rs  types.rs  util.rs  volume.rs
tests/: integration.rs  raw_readonly_regression.rs
website/: app.js  compatibility.html  index.html  research.html  start.html  styles.css  technology.html
(+476 files in other folders)
